fixed footer position fixed, shifted the navigation bar to the right, changed width, understood style props logic, shifted tailwind code from globals.css to layout.js

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 
@@ -25,12 +26,5 @@ body {
 }
 
 .main-content{
-  width: 70%;
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif;
-  @apply font-mono text-indigo-300;
   border: 5px solid rebeccapurple;
 }
